[relates #575] Release camel examples as part of the patch